--- a/activity 2.html
+++ b/activity 2.html
@@ -14,6 +14,14 @@
             background-color: crimson;
             opacity: 0.2;
         }
-        #
+        #div3{
+            height:200px;
+            background-color: crimson;
+            opacity: 0.2;
+        }
     </style>
+    <body>
+        <div id="div1"
+        
+    </body>
 </html>
