--- a/activity 2.html
+++ b/activity 2.html
@@ -21,7 +21,18 @@
         }
     </style>
     <body>
-        <div id="div1"
-        
+        <div id="div1">
+         <p>opacity 0.1</p>
+        </div>
+        <div id="div2">
+            <p>opacity 0.3</p>
+        </div>
+        <div id="div3">
+            <p>opacity 0.6</p>
+        </div>
+        <div><p>
+            opacity 1 (default)
+        </p>
+    </div>
     </body>
 </html>
